--- a/home.htm
+++ b/home.htm
@@ -97,7 +97,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href="/visualizations.htm">Visualizing Algebraic Surfaces</a>
+          <a class="w3-button w3-black" href="./visualizations.htm">Visualizing Algebraic Surfaces</a>
         </div>
         <img src="./images/clebsh1.jpg" alt="Clebsh 27 lines" style="width:99%" image-orientation=from-image>
       </div>
@@ -105,7 +105,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black">
-          <a class="w3-button w3-black" href="/minecraft.htm">Generating Minecraft Worlds</a>
+          <a class="w3-button w3-black" href="./minecraft.htm">Generating Minecraft Worlds</a>
         </div>
         <img src="./images/minecraft_snapshot.png" alt="minecraft world" style="width:99%">
       </div>
