--- a/visualizations.htm
+++ b/visualizations.htm
@@ -50,7 +50,7 @@
 <!--Main body-->
 <div>
   <div class="w3-container w3-padding-32" id="27 Lines">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
+    <h3 class="w3-border-bottom w3-border-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
       <div class="w3-content w3-display-container" style="max-width:300px">
         <img class="slideshow1" src="./images/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
         <img class="slideshow1" src="./images/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
@@ -69,7 +69,7 @@
   </div>
 
   <div class="w3-container w3-padding-32" id="Calculus III">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Calculus III</h3>
+    <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Calculus III</h3>
     <div class="w3-content w3-display-container" style="max-width:270px">
       <img class="slideshow2" src="./images/saddle1.jpg" alt="saddle 1" style="max-width:270px">
       <img class="slideshow2" src="./images/saddle2.jpg" alt="saddle 2" style="max-width:270px">
