--- a/flightroute.html
+++ b/flightroute.html
@@ -37,7 +37,7 @@
 <!--Top navigation bar-->
 <div class="w3-top">
     <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-        <a href="./home.htm" class="w3-bar-item w3-button"><b>Go back</b></a>
+        <a href="./index.html" class="w3-bar-item w3-button"><b>Go back</b></a>
 
         <div class="w3-right w3-hide-small">
             <a href="#Background" class="w3-bar-item w3-button">Background</a>
